src/Database.css
.contentArea {
  width: 100%;
  /* overflow: hidden; */
}

.iconTitle {
  display: flex;
  gap: 0.5rem;
  align-items: baseline;
}

/* TABLES */
.tableWrapper {
  width: 100%;
  overflow-x: auto;
}

.contentArea table {
  border-bottom: 1px solid rgb(233, 233, 231);
  width: min-content;
  table-layout: fixed;
  height: 100%;
  padding: 0;
  border-collapse: collapse;
  font-size: 14px;
}
.contentArea table tr {
  border-top: 1px solid rgb(233, 233, 231);
  padding: 0;
}

.contentArea table td:not(:last-child), .contentArea table th:not(:last-child) {
  border-right: 1px solid rgb(233, 233, 231);
}

.contentArea th, .contentArea td {
  min-height: 32px;
  padding: 12px;
  margin: 0;
  width: 200px;
}

.contentArea th {
  text-align: left;
}

.columnName {
  display: flex;
  gap: 8px;
  align-items: baseline;

  color: rgba(55, 53, 47, 0.6);
  font-weight: 500;
}


td.title {
  position: relative;
  width: 275px;
}

table .iconTitle {
  font-weight: bold;
  text-decoration: underline;
  text-decoration-color: rgb(223, 223, 222);
}

.openLinkContainer {
  display: none;
}

tr:hover .openLinkContainer {
  display: flex;
  align-items: center;

  position: absolute;
  z-index: 2;
  top: 4px;
  right: 6px;

  cursor: pointer;

  background-color: white;
  color: rgba(55, 53, 47, 0.6);
  font-size: 12px;
  font-weight: 500;
  letter-spacing: 0.5px;
  height: 24px;
  padding: 0px 6px;
  border-radius: 3px;

  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
}
.openLink {
  color: inherit;
  text-decoration: none;
}

tr:hover .openLinkContainer:hover {
  z-index: 2;
  background-color: rgb(240, 240, 240);
}

td div.field, td .field .content, td .field .content .block, td .field .content .block .field {
  height: 100%;
  width: 100%;
}

td span.field {
  display: block;
}

/*
td .content, td .content .block {
  width: 100%;
  height: 100%;
} */

table .selectCell{
  width: 100%;
  height: 100%;
}

table .addProperty, table .addRow, .board .addRow, .list .addRow {
  cursor: pointer;
  color: rgb(185, 185, 183);
  font-weight: normal;
}
table .addProperty {
  text-align: center;
  width: 2rem;
}

table .addProperty:hover, table .addRow:hover, .board .addRow:hover, .list .addRow:hover {
  background-color: rgb(233, 233, 231);
}


/* ACTION BAR */
.dbActionBar {
  display: flex;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 10px;
}

.dbActionBar .viewButton {
  text-overflow: ellipsis;
}

.dbActionBar .otherActions {
  display: flex;
  justify-content: flex-end;
}

.dbActionBar button, .dbActionBar .viewButton {
  border: none;
  background: none;
  font-size: 14px;
  padding: 6px;
  border-radius: 3px;
  color: rgba(55, 53, 47, 0.6);
  cursor: pointer;
}

.dbActionBar button.withDropDownIcon {
  display: flex;
  align-items: center;
}

.dbActionBar button:hover {
  background-color: rgba(55,53,47,0.08);
}

button.newButton {
  background-color: #2eaadc;
  color: white;
  font-weight: bold;
  border: 1px solid rgb(76, 147, 188);
  border-radius: 3px;
  padding: 8px;
}
button.newButton:hover {
  background-color: rgb(6, 156, 205);
}

button.viewButton {
  color: black;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
}

/* BORDER BELOW ACTION BAR */
.board, .list, .gallery, table {
  border-top: 1px solid rgb(233, 233, 231);
  padding-top: 16px;
}


/* BOARD */
.board {
  display: flex;
  width: 100%;
  overflow-x: auto;
  gap: 20px;
}

.boardColumn {
  flex: 0 0 auto;
  width: 260px;
  padding: 1px;
}

.boardColumn>header {
  display: flex;
  margin: 10px 5px;
  font-size: 14px;
  align-items: baseline;
  justify-content: space-between;
}

.card {
  width: 100%;
  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 2px 4px;
  border-radius: 3px;
  margin-bottom: 5px;
  background: white;
  overflow: hidden;
  padding: 10px;

  display: flex;
  flex-direction: column;

  font-size: 12px;
}
.card a {
  color: inherit;
  text-decoration: none;
}

.card .iconTitle {
  font-weight: 500;
  font-size: 14px;
}

.board .cardProp {
  margin-top: 10px;
}

.boardColumn>.addRow {
  padding: 8px;
  border-radius: 3px;
  font-size: 14px;
}
.boardColumn header .addRow {
  padding: 3px;
  border-radius: 3px;
}


/* SINGLE DB Page */
.pageDbInfo .field .content, .pageDbInfo .field .content .block {
  width: 100%;
  height: 100%;
}
.pageDbInfo .columnName, .pageDbInfo>.field {
  border-radius: 3px;
  padding: 6px;
}
.pageDbInfo .columnName:hover, .pageDbInfo>.field:hover {
  background-color: rgba(55, 53, 47, 0.08);
}

.singlePageDBHeader {
  padding-bottom: 2rem;
  border-bottom: 1px solid rgb(234, 234, 233);
}

.pageDbInfo {
  display: grid;
  grid-template-columns: 160px 1fr;
}

.pageDbInfo .addProperty {
  cursor: pointer;
}

/* LIST */
.list {
  width: 100%;
  overflow-x: auto;
}
.list .row, .list .addRow {
  width: 100%;
}

.list .row a {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  padding: 4px;

  text-decoration: none;
  color: inherit;

  border-radius: 3px;
}

.list a:hover {
  background-color: rgb(233, 233, 231);
}
.list .iconTitle {
  display: flex;
  align-items: baseline;
  font-weight: 500;
  font-size: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.list .rowProps {
  display: flex;
  justify-content: flex-end;
  align-items: baseline;
  gap: 1rem;
  font-size: 14px;
  text-overflow: ellipsis;
  white-space: nowrap;
}
/* .list .cardProp div.field .content .block span.field */
.list .cardProp, .list .cardProp .field, .list .cardProp .content, .list .cardProp .block {
  display: block;
  max-width: 180px;
}
.list .cardProp span.field {
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.list .addRow {
  padding: 4px;
  border-radius: 3px;
}

/* GALLERY */
.gallery {
  width: 100%;
  padding-right: 3px;
  padding-left: 3px;
  overflow-x: auto;
  display: grid;
  grid-template-columns: repeat( auto-fill, minmax(250px, 1fr) );
  grid-auto-rows: 1fr;
  gap: 16px;
}

.gallery .card {
  height: 250px;
  cursor: pointer;
}

.gallery .addRow {
  color: rgba(55, 53, 47, 0.3);
  border: 1px solid rgb(237, 237, 236);
  border-radius: 3px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.gallery .card:hover, .gallery .addRow:hover {
  background-color: rgba(55, 53, 47, 0.03);
}

